--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@turf/turf": "^6.5.0",
     "geojson": "^0.5.0",
     "maplibre-gl": "^2.3.0",
     "next": "12.2.5",
+    "osm-api": "^1.0.4",
+    "osmtogeojson": "^3.0.0-beta.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.19"
