--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "space-eats-next",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
