--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@turf/turf": "^6.5.0",
     "geojson": "^0.5.0",
     "maplibre-gl": "^2.3.0",
     "next": "12.2.5",
@@ -26,11 +25,14 @@
     "react-map-gl": "^7.0.19"
   },
   "devDependencies": {
+    "@turf/turf": "^6.5.0",
     "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "scramjet": "^4.36.8",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.2"
   }
 }
