--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,7 @@
   "remoteUser": "user",
   "runArgs": ["--init"],
   "overrideCommand": false,
+  "postCreateCommand": "npm ci",
   "customizations": {
     "vscode": {
       "settings": {
