--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,15 +8,24 @@ RUN apt update && apt install -y \
     jq \
     gcc \
     make \
+    gdal-bin \
     python3 \
-    python3-pip
+    python3-pip \
+    python3-gdal \
+    python3-rtree
 
 
 RUN curl -Ls https://deb.nodesource.com/setup_18.x | bash
 RUN apt update && apt install -y nodejs
 
-RUN pip3 install ginza ja-ginza ja-ginza-electra
+RUN pip install --upgrade pip
+RUN pip install --upgrade setuptools
+RUN pip install --upgrade ipykernel
 
+WORKDIR /app
+COPY . /app
+
+RUN pip install -r requirements.txt
 
 RUN useradd -m user
 
