--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
   "name": "Ubuntu 22.04 Node.js and Python",
+  "context": "../",
   "dockerFile": "./Dockerfile",
   "forwardPorts": [3000, 5000],
   "remoteUser": "user",
