--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,7 +31,9 @@
         "esbenp.prettier-vscode",
         "MS-CEINTL.vscode-language-pack-ja",
         "kbysiec.vscode-go-to-mdn",
-        "nickdemayo.vscode-json-editor"
+        "nickdemayo.vscode-json-editor",
+        "ms-python.python",
+        "ms-toolsai.jupyter"
       ]
     }
   }
